添加了创建用户功能
